# sota_finder

./: .env.example  .gitignore  README.md  app.py  pyproject.toml  requirements.txt
scripts/: eval_gold_sota.py
src/: compare.py  extract.py  fetch_fulltext.py  fetch_papers.py  llm_extract.py  main.py  mock_data.py  normalize.py  red_flags.py  render_report.py  rule_extract.py  schemas.py
tests/: test_compare.py  test_dataset_anchors.py  test_foundation_model_tag.py  test_fulltext_extraction.py  test_modality_filter.py  test_normalize.py  test_ranking.py  test_retrieval_matching.py  test_schemas.py
tests/eval/: gold_sota_cases.json
